[tool.poetry]
name = "currencycbapi"
version = "0.1.0"
description = "Select currency exchange rates from Russian Central Bank."
authors = ["Andrey Grishin <grishinandreyy@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
