[tool.poetry]
name = "CurrencyAPI"
version = "0.1.0"
description = "Select currency exchange rates from Russian Central Bank."
authors = ["Andrey Grishin <grishinandreyy@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.6.0"
tqdm = "^4.66.3"
pandas = "^2.2.1"
requests = "^2.31.0"
bs4 = "^0.0.2"
fake-useragent = "^1.5.1"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
